--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,15 +67,15 @@
         <link href="cover.css" rel="stylesheet">
     </head>
     <body class="d-flex text-center text-bg-dark">
-        <div class="cover-container w-100 p-3 mx-auto d-flex flex-column">
-            <header class="mb-auto">
-                <div>
-                    <h3 class="float-md-start mb-0">Robin LECUPPE</h3>
-                    <nav class="nav nav-masthead justify-content-center float-md-end">
+        <div class="cover-container w-100 mx-auto d-flex flex-column">
+            <header class="px-5 vw-100">
+                <div class="d-flex justify-content-between align-items-center w-full">
+                    <h3>Robin LECUPPE</h3>
+                    <nav class="nav nav-masthead justify-content-center gap-1">
                         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Accueil</a>
                         <a class="nav-link fw-bold py-1 px-0" href="#portfolio">Portfolio</a>
                         <a class="nav-link fw-bold py-1 px-0" href="#cursus">Cursus</a>
-                        <a class="nav-link fw-bold py-1 px-0" href="#cursus">Compétences</a>
+                        <a class="nav-link fw-bold py-1 px-0" href="#competences">Compétences</a>
                         <a class="nav-link fw-bold py-1 px-0" href="#contact">Contact</a>
                     </nav>
                 </div>
@@ -121,12 +121,12 @@
                             </div>
                         </div>
                         <div class="container right">
-                            <div class="date">2022 - 2023</div>
+                            <div class="date">2018 - 2023</div>
                             <i class="icon fa fa-user"></i>
                             <div class="content">
-                                <h2>5ème année - Ingénieurie du Cloud Computing</h2>
+                                <h2>Ecole d'ingénieur - CYTech</h2>
                                 <p>
-                                    5ème année d'école d'ingénieur en option Cloud, je fais en parallèle mon alternance chez ENEDIS.
+                                    Actuellement en 5ème année d'école d'ingénieur en option Cloud à CYTech (ex. EISTI), établissement que j'ai rejoint en cycle préparatoire intégré.
                                 </p>
                             </div>
                         </div>
@@ -141,28 +141,18 @@
                             </div>
                         </div>
                         <div class="container right">
-                        <div class="date">18 May</div>
-                        <i class="icon fa fa-running"></i>
-                        <div class="content">
-                            <h2>Lorem ipsum dolor sit amet</h2>
-                            <p>
-                            Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
-                            </p>
-                        </div>
+                            <div class="date">06/21 - 07/21</div>
+                            <i class="icon fa fa-running"></i>
+                            <div class="content">
+                                <h2>Stage développeur web - Yukan Innovate</h2>
+                                <p>
+                                    J'ai effectué un stage de 4 semaines chez Yukan Innovate, une startup spécialisée dans le développement de solutions web. J'ai travaillé sur leur produit SEIGOS en full-stack, bien que plus concentré sur la partie back-end et les appels d'API publiques.
+                                </p>
+                            </div>
                         </div>
                         <div class="container left">
                         <div class="date">10 Feb</div>
                         <i class="icon fa fa-cog"></i>
-                        <div class="content">
-                            <h2>Lorem ipsum dolor sit amet</h2>
-                            <p>
-                            Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
-                            </p>
-                        </div>
-                        </div>
-                        <div class="container right">
-                        <div class="date">01 Jan</div>
-                        <i class="icon fa fa-certificate"></i>
                         <div class="content">
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>
