--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Robin LECUPPE</title>
 
         <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
         <style>
@@ -75,7 +75,6 @@
                         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Accueil</a>
                         <a class="nav-link fw-bold py-1 px-0" href="#portfolio">Portfolio</a>
                         <a class="nav-link fw-bold py-1 px-0" href="#cursus">Cursus</a>
-                        <a class="nav-link fw-bold py-1 px-0" href="#competences">Compétences</a>
                         <a class="nav-link fw-bold py-1 px-0" href="#contact">Contact</a>
                     </nav>
                 </div>
@@ -107,59 +106,67 @@
                     </div>
                 </div>
             </section>
-            <section id="cursus" class="vh-100 d-flex flex-column justify-content-center align-items-center">
+            <section id="cursus" class="vh-100 d-flex flex-column justify-content-center align-items-center mx-auto">
                 <div class="timeline">
                     <h1 class="">Cursus</h1>
                     <div class="container left">
                         <div class="date">09/22 - 09/23</div>
-                            <i class="icon fa fa-home"></i>
-                            <div class="content">
-                                <h2>Développeur informatique alternant - ENEDIS</h2>
-                                <p>
-                                    Dans le cadre de ma dernière année d'école d'ingénieur, je suis en alternance chez ENEDIS où je développe des solutions web en full-stack.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="container right">
-                            <div class="date">2018 - 2023</div>
-                            <i class="icon fa fa-user"></i>
-                            <div class="content">
-                                <h2>Ecole d'ingénieur - CYTech</h2>
-                                <p>
-                                    Actuellement en 5ème année d'école d'ingénieur en option Cloud à CYTech (ex. EISTI), établissement que j'ai rejoint en cycle préparatoire intégré.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="container left">
-                            <div class="date">02/22 - 07/22</div>
-                            <i class="icon fa fa-gift"></i>
-                            <div class="content">
-                                <h2>Singidunum University - ERASMUS</h2>
-                                <p>
-                                    J'ai effectué un semestre à Singidunum University en option Software development à Belgrade en Serbie dans le cadre du programme ERASMUS.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="container right">
-                            <div class="date">06/21 - 07/21</div>
-                            <i class="icon fa fa-running"></i>
-                            <div class="content">
-                                <h2>Stage développeur web - Yukan Innovate</h2>
-                                <p>
-                                    J'ai effectué un stage de 4 semaines chez Yukan Innovate, une startup spécialisée dans le développement de solutions web. J'ai travaillé sur leur produit SEIGOS en full-stack, bien que plus concentré sur la partie back-end et les appels d'API publiques.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="container left">
-                        <div class="date">10 Feb</div>
-                        <i class="icon fa fa-cog"></i>
+                        <i class="icon fa fa-home"></i>
                         <div class="content">
-                            <h2>Lorem ipsum dolor sit amet</h2>
+                            <h2>Développeur informatique alternant - ENEDIS</h2>
                             <p>
-                            Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Dans le cadre de ma dernière année d'école d'ingénieur, je suis en alternance chez ENEDIS où je développe des solutions web en full-stack.
                             </p>
                         </div>
+                    </div>
+                    <div class="container right">
+                        <div class="date">2018 - 2023</div>
+                        <i class="icon fa fa-user"></i>
+                        <div class="content">
+                            <h2>Ecole d'ingénieur - CYTech</h2>
+                            <p>
+                                Actuellement en 5ème année d'école d'ingénieur en option Cloud à CYTech (ex. EISTI), établissement que j'ai rejoint en cycle préparatoire intégré.
+                            </p>
                         </div>
+                    </div>
+                    <div class="container left">
+                        <div class="date">02/22 - 07/22</div>
+                        <i class="icon fa fa-gift"></i>
+                        <div class="content">
+                            <h2>Singidunum University - ERASMUS</h2>
+                            <p>
+                                J'ai effectué un semestre à Singidunum University en option Software development à Belgrade en Serbie dans le cadre du programme ERASMUS.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container right">
+                        <div class="date">06/21 - 07/21</div>
+                        <i class="icon fa fa-running"></i>
+                        <div class="content">
+                            <h2>Stage développeur web - Yukan Innovate</h2>
+                            <p>
+                                J'ai effectué un stage de 4 semaines chez Yukan Innovate, une startup spécialisée dans le développement de solutions web. J'ai travaillé sur leur produit SEIGOS en full-stack, bien que plus concentré sur la partie back-end et les appels d'API publiques.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="contact" class="vh-100 d-flex flex-column justify-content-center align-items-center">
+                <div class="">
+                    <div class="flex flex-col gap-y-5 justify-between items-center">
+                        <h1 class="mb-5">
+                            Contact
+                        </h1>
+                        <a href="https://www.linkedin.com/in/robin-lecuppe/" target="_blank" class="flex btn btn-light justify-center items-center w-full bg-gray-700 shadow-xl rounded-lg mx-2">
+                            <i class="bi bi-linkedin h3"></i>
+                        </a>
+                        <a href="https://github.com/rlecuppe" target="_blank" class="flex btn btn-light justify-center items-center w-full bg-gray-700 shadow-xl rounded-lg">
+                            <i class="bi bi-github h3"></i>
+                        </a>
+                        <a href="mailto:robin.lecuppe@gmail.com" target="_blank" class="flex btn btn-light justify-center items-center w-full bg-gray-700 shadow-xl rounded-lg mx-2">
+                            <i class="bi bi-envelope-fill h3"></i>
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
