--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
                 <h1 class="pb-5">Portfolio</h1>
                 <div class="justify-content-center d-flex text-dark">
                     <div class="card mx-3" style="width: 40rem;">
-                        <img src="images/mlq.png" class="card-img-top" alt="MLQ Website Preview">
                         <div class="card-body">
-                            <h5 class="card-title">Massive Lyrics Quiz</h5>
+                            <img src="images/mlq.png" class="card-img-top" alt="MLQ Website Preview">
+                            <h5 class="card-title mt-3">Massive Lyrics Quiz</h5>
                             <p class="card-text">MLQ est un site d'e-commerce dans le cadre d'un projet scolaire</p>
                         </div>
                     </div>
-                    <div class="card mx-3" style="width: 40rem;">
-                        <img src="" class="card-img-top" alt="...">
+                    <div class="card mx-3" style="width:40rem;">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <img src="images/dix_kdo.png" class="card-img-top" alt="Logo Dix-KDO" style="width: auto; max-height: 30rem;">
+                            <h5 class="card-title mt-3">DIX KDO</h5>
+                            <p class="card-text">Projet personnel en cours de création.</p>
                         </div>
                     </div>
                 </div>
